# dmtools_notebooks

./: .gitignore  DMTOOLSGraphDemo3.ipynb  DMTOOLSGraphDemo_withparser.ipynb  DMToolsPyPi_Testing20250116V1.ipynb  DMToolsPyPi_Testing20250124V3.ipynb  Demo20240724.ipynb  DotEnvTesting.ipynb  README.md  TestPyPi1.ipynb  Untitled.ipynb  requirements.txt
Demos/: CleanDataValueV1.ipynb  CreateCleanData_20240816.ipynb  DMToolsPyPi_Testing20250729V1.ipynb  MakePlotPyPiV0.ipynb  MakePlotPyPiV2_20240816.ipynb  MathJax.ipynb  Migrate2PyPiV0.ipynb  ReadJSON.ipynb  TestLibrary20240911.ipynb  TestPatch1.ipynb  Untitled.ipynb  ZeroInvestigation.ipynb  colab_large_image.ipynb  current_plot.ipynb  current_plot_modular.ipynb  current_plot_modular_202509271433.ipynb
Environmental_Variables/: DotEnvGDrive.ipynb  DotEnvTesting.ipynb
PyPi_Testing/: DMToolsPyPi_Testing20250729V1.ipynb  FullCreate.ipynb  FullCreatePlotly.ipynb  TestPyPi1.ipynb  api_key_note.md  env_example  matplotlib.ipynb
archive/: CleanDataValueV1.ipynb  CreateCleanData_20240911.ipynb  DMTOOLSDataParser.ipynb  DMToolsPyPi_Colab_20251122V1.ipynb  DMToolsPyPi_Testing20250124V2.ipynb  DMToolsPyPi_Testing20250729V1.ipynb  DecodeRedisByte.ipynb  MakePlotPyPiV2_20240816.ipynb  MathJax.ipynb  PopGraphTable_20240903.ipynb  PopSON.ipynb  ReadJSON.ipynb  Untitled.ipynb  (+7 more)
brown_edu_dmtools/: LICENSE.txt  pyproject.toml
brown_edu_dmtools/src/dmtools_client_package/: DMTOOL_letters.txt  dmtools_client_module.py
brown_edu_dmtools/src/package_b/: module_b.py
brown_edu_dmtools/tests/: test_module_a.py  test_module_b.py
(+6 files in other folders)
